fixing navbar spacing

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,6 +1,6 @@
 .nav {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     list-style: none;
     padding:50px;
   }
